syntax = "proto3";

package user;
option go_package="user";

message User {
    string id = 1;
    string fullname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    string created_on = 6;
}

message SignUpUser {
    string fullname = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

message LoginUser {
    string email = 1;
    string password = 2;
}

message SignupRequest {
    SignUpUser signUpUser = 1;
}

message SignupResponse {
    bool success = 1;
}

message LoginRequest {
    LoginUser loginUser = 1;
}

message LoginResponse {
    bool success = 1;
    string token = 2;
}

service UserService {
    rpc Signup(SignupRequest) returns (SignupResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
}